--- a/ops-order-service/src/main/resources/application.yml
+++ b/ops-order-service/src/main/resources/application.yml
@@ -8,6 +8,19 @@ spring:
     url: jdbc:mysql://localhost:3306/shop?useUnicode=true&characterEncoding=UTF-8
     username: root
     password: 123456
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    database: 0
+    timeout: 10000
+    lettuce:
+      pool:
+        #最大连接数 默认8
+        max-active: 8
+        #最大连接阻塞时间
+        max-wait: 1000ms
+        #最大空闲连接，默认8
+        max-idle: 200
   dubbo:
     application:            #应用配置，用于配置当前应用信息，不管该应用是提供者还是消费者。
       id: dubbo-order-provider
@@ -24,6 +37,12 @@ mybatis:
   type-aliases-package: com.nbcb.pojo
 # 自定义消息参数
 mq:
+  seckill:
+    consumer:
+      group:
+        name: seckillTopic_group
+    topic: seckillTopic
+    tag: seckilled
   order:
     confirm:
       topic: orderConfirmTopic
