--- a/ops-order-web/pom.xml
+++ b/ops-order-web/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>ops-pojo</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+            <version>2.0.3</version>
+        </dependency>
     </dependencies>
 
 </project>
