--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,17 @@
             <version>1.18.6</version>
             <scope>provided</scope>
         </dependency>
+
+        <!--Spring Boot Redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.6.0</version>
+        </dependency>
     </dependencies>
 <!--    <build>-->
 <!--        <plugins>-->
